feat: add security middleware
